footer stackoverflow fix

--- a/form.css
+++ b/form.css
@@ -1,5 +1,8 @@
 body {
     background-color: #333333;
+    min-height: 100%;
+    height: 100px;
+
 }
 
 .link {
@@ -54,6 +57,8 @@ body {
     color: black;
     margin: 0%;
     padding: 0%;
+    margin-top: -200px;
+    height: 100px;
 }
 
 .logotipo {
